// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h3>
      Lanza
    </h3>
    <h1
      data-testid="first-name-title"
    >
      Jorge
    </h1>
    <p
      class="mi-clase-favorita"
      style="background-color: blue; color: white; border-radius: 10px; padding: 10px;"
    >
      CSGO, Valorant
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: red; border-radius: 10px; padding: 1rem; color: white;"
    >
      {"zipCode":"ABC-123","country":"Canada"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot con screen 1`] = `
<div
  data-testid="div-app"
>
  <h3>
    Lanza
  </h3>
  <h1
    data-testid="first-name-title"
  >
    Jorge
  </h1>
  <p
    class="mi-clase-favorita"
    style="background-color: blue; color: white; border-radius: 10px; padding: 10px;"
  >
    CSGO, Valorant
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: red; border-radius: 10px; padding: 1rem; color: white;"
  >
    {"zipCode":"ABC-123","country":"Canada"}
  </p>
</div>
`;
